--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
     <div> 
         <p> 
             <img src="../assets/logo.png" class="App-logo" />
-            <span class="container-md titulo">Tienda de Regalos. Zoologico Hermosillo.</span>
+            <span class="container-md titulo">Tienda de Regalos.</span>
+            <span>Zoologico Hermosillo.</span>
         </p>
     </div>
 </header>
