--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     <label for="FormControlInput" class="form-label texto">Login</label>
     <input type="text" class="form-control" id="FormControlInput" placeholder="usuario" name="usuario">
     <label for="FormControlInput" class="form-label texto">Contraseña</label>
-    <input type="text" class="form-control" id="FormControlInput" placeholder="contraseña" name="contraseña">
+    <input type="password" class="form-control" id="FormControlInput" placeholder="password" name="password">
     <br />
     <button type="submit" class="inicio" (click)="iniciarSesion()">Iniciar Sesion</button>    
 
