--- a/src/app/components/menu-inventario/menu-inventario.component.html
+++ b/src/app/components/menu-inventario/menu-inventario.component.html
@@ -22,10 +22,6 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad Activa </th>
             <td mat-cell *matCellDef="let element"> {{element.CantidadActual}} </td>
         </ng-container>
-        <ng-container matColumnDef="FechaAdquision">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Adquisicion </th>
-            <td mat-cell *matCellDef="let element"> {{element.FechaAdquision}} </td>
-        </ng-container>
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
             <td mat-cell *matCellDef="let element">
@@ -40,18 +36,26 @@
     </mat-paginator>
 </div>
 <div>
+    <h3>Administracion de inventario</h3>
+    <form [formGroup]="formInventario">
+        <label for="FormControlInput" class="form-label">Objetos:</label>
+        <div class="input-group mb-3">
+            <select formControlName="id" [(ngModel)]="seleccion" class="form-select" (change)="setName()" [value]='0'>
+                <option disabled value="0">Seleccione una opcion</option>
+                <option value="9999"><b>Dar de alta un objeto</b></option>
+                <option *ngFor="let item of objetos" [ngValue]="item.ID">
+                    {{ item.Nombre }}
+                </option>
+            </select>
+            &nbsp;
+        </div>
 
-</div>
-<div>
-    <form class="mb-3 module" [formGroup]="formInventario">
-        <label for="FormControlInput" class="form-label texto">Objeto:</label>
+        <label for="FormControlInput" class="form-label texto">Nombre del objeto:</label>
         <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" formControlName="objeto">
-        <label for="FormControlInput" class="form-label texto">Descripcion:</label>
+        <label for="FormControlInput" class="form-label texto">Descripcion del objeto:</label>
         <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="descripcion">
-        <label for="FormControlInput" class="form-label texto">Cantidad:</label>
+        <label for="FormControlInput" class="form-label texto">Cantidad disponible:</label>
         <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="cantidad">
-        <label for="FormControlInput" class="form-label texto">Fecha de Registro:</label>
-        <input type="date" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="fechaRegistro">
         <br />
         <button type="submit" (click)="altaInventario()" [disabled]="formInventario.invalid">Añadir</button> 
     </form>
