--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,8 @@
 
     <button type="menu" (click)="clickPromociones()">Promociones</button>
 
+    <button type="menu" (click)="clickProductos()">Productos</button>
+
     <button type="menu" (click)="clickInventario()">Inventario</button>
 
 </div>
