--- a/src/styles.css
+++ b/src/styles.css
@@ -41,9 +41,13 @@ button:hover{
 }
 
 input{
-    background-color: #e0dcdc;
+    background-color: #f4ecec;
 }
 
 label{
     margin-top: 0.5em;
+}
+
+select{
+    background-color: #f4ecec;
 }
