--- a/src/app/components/menu-productos/menu-productos.component.html
+++ b/src/app/components/menu-productos/menu-productos.component.html
@@ -1,4 +1,64 @@
 <app-navbar />
-<h2>Inventario.</h2>
+<h2>Producto.</h2>
+<div class="mat-elevation-z0 espacio module">
+    <mat-form-field class="mat-form-field">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input autocomplete="off">
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="codigo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo </th>
+            <td mat-cell *matCellDef="let element"> {{element.Codigo}} </td>
+        </ng-container>
+        <ng-container matColumnDef="precio">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
+            <td mat-cell *matCellDef="let element"> {{element.Precio}} </td>
+        </ng-container>
+        <ng-container matColumnDef="inventarioID">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID en Inventario </th>
+            <td mat-cell *matCellDef="let element"> {{element.InventarioID}} </td>
+        </ng-container>
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon class="material-icons iconos" matTooltip="Eliminar" (click)="eliminar(element.Codigo)">delete</mat-icon>
+            </td>
+        </ng-container>
 
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+    </mat-paginator>
+</div>
+<div>
+    <h3>Administracion de inventario</h3>
+    <form [formGroup]="formProducto">
+        <label for="FormControlInput" class="form-label">Productos:</label>
+        <div class="input-group mb-3">
+            <select formControlName="codigo" [(ngModel)]="seleccion" class="form-select" (change)="setName()" [value]='0'>
+                <option disabled value="0">Seleccione una opcion</option>
+                <option value="9999"><b>Dar de alta un producto</b></option>
+                <option *ngFor="let item of objetos" [ngValue]="item.Codigo">
+                    {{ item.Codigo }}
+                </option>
+            </select>
+            &nbsp;
+        </div>
+        <label for="FormControlInput" class="form-label texto">Precio del objeto:</label>
+        <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="precio">
+        <label for="FormControlInput" class="form-label texto">ID del producto en Inventario:</label>
+        <div class="input-group mb-3">
+            <select formControlName="inventarioID" [(ngModel)]="seleccion2" class="form-select" [value]='0'>
+                <option disabled value="0">Seleccione un objeto</option>
+                <option *ngFor="let item of Lista_Objetos" [ngValue]="item.ID">
+                    {{ item.Nombre }}
+                </option>
+            </select>
+            &nbsp;
+        </div>        
+        <br />
+        <button type="submit" (click)="altaInventario()" [disabled]="formProducto.invalid">Añadir</button> 
+    </form>
+</div>
 <app-bottombar></app-bottombar>
