--- a/src/app/components/menu-promociones/menu-promociones.component.html
+++ b/src/app/components/menu-promociones/menu-promociones.component.html
@@ -11,7 +11,7 @@
             <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
         </ng-container>
         <ng-container matColumnDef="tipo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de Descuento </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la Promocion </th>
             <td mat-cell *matCellDef="let element"> {{element.TipoDescuento}} </td>
         </ng-container>
         <ng-container matColumnDef="descuento">
@@ -49,17 +49,17 @@
             </select>
             &nbsp;
         </div>
-        <label for="FormControlInput" class="form-label texto">Tipo de descuento:</label>
-        <select formControlName="tipoDescuento" class="form-select" [value]='0' [(ngModel)]="seleccion3">
-            <option disabled value="-1">Seleccione un producto</option>
-            <option value="0">Monetario</option>
-            <option value="1">Porcentaje</option>
+        <label for="FormControlInput" class="form-label texto">Estado de la promocion:</label>
+        <select formControlName="tipoDescuento" class="form-select" [(ngModel)]="seleccion3">
+            <option disabled value="-1">Seleccione un estado</option>
+            <option value="false">Inactivo</option>
+            <option value="true">Activo</option>
         </select>        
         <label for="FormControlInput" class="form-label texto">Descuento a aplicar:</label>
         <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="descuento">
         <label for="FormControlInput" class="form-label texto">ID del Producto:</label>
         <div class="input-group mb-3">
-            <select formControlName="productoCodigo" [(ngModel)]="seleccion2" class="form-select" [value]='0'>
+            <select formControlName="productoCodigo" [(ngModel)]="seleccion2" class="form-select">
                 <option disabled value="0">Seleccione un producto</option>
                 <option *ngFor="let item of Lista_Producto" [ngValue]="item.Codigo">
                     {{ item.Codigo }}
