--- a/src/app/components/registro-compras/registro-compras.component.html
+++ b/src/app/components/registro-compras/registro-compras.component.html
@@ -2,9 +2,15 @@
 <h2>Registrar Compra</h2>
 <form class="mb-3 module" [formGroup]="formVenta">
     <label for="FormControlInput" class="form-label texto">Producto:</label>
-    <input type="text" class="form-control" id="FormControlInput1" formControlName="producto">
-    <label for="FormControlInput" class="form-label texto">Cantidad:</label>
-    <input type="text" class="form-control" id="FormControlInput2" placeholder="0" formControlName="cantidad">
+    <div class="input-group mb-3">
+        <select formControlName="productoCodigo" [(ngModel)]="seleccion2" class="form-select">
+            <option disabled value="0">Seleccione un producto</option>
+            <option *ngFor="let item of Lista_Inventario" [ngValue]="item.ID">
+                {{ item.Nombre }}
+            </option>
+        </select>
+        &nbsp;
+    </div> 
     <br />
     <button type="submit" (click)="agregar()" [disabled]="formVenta.invalid">Agregar</button> 
 </form>
