--- a/src/app/components/bottombar/bottombar.component.html
+++ b/src/app/components/bottombar/bottombar.component.html
@@ -1,3 +1,5 @@
 <div class="App-navbar">
-    <button type="menu" (click)="clickSalir()">Salir</button>
+    <a href="http://prueba578:FO2Zz1fn@www.prueba-api-usuarios.com.mialias.net/">
+        <button type="menu" >Salir</button>
+    </a>
 </div>
