--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div>
-    <h4>Bienvenido $usuario.</h4>
-    <p>Seleccione una opcion del menu superior</p>
+    <h4>Bienvenido vendedor.</h4>
+    <p>Utilize la barra de navegacion superior para utilizar sus opciones.</p>
 </div>
 <app-bottombar></app-bottombar>
