--- a/src/app/components/menu-inventario/menu-inventario.component.html
+++ b/src/app/components/menu-inventario/menu-inventario.component.html
@@ -57,7 +57,7 @@
         <label for="FormControlInput" class="form-label texto">Cantidad disponible:</label>
         <input type="text" class="form-control" id="FormControlInventario" autocomplete="off" placeholder="" formControlName="cantidad">
         <br />
-        <button type="submit" (click)="altaInventario()" [disabled]="formInventario.invalid">Añadir</button> 
+        <button class="medio" type="submit" (click)="altaInventario()" [disabled]="formInventario.invalid">Añadir</button> 
     </form>
 </div>
 <app-bottombar></app-bottombar>
