--- a/src/app/components/menu-inventario/menu-inventario.component.css
+++ b/src/app/components/menu-inventario/menu-inventario.component.css
@@ -9,3 +9,23 @@ label{
 select{
     background-color: #f4ecec;
 }
+
+h2,h3{
+    flex: auto;
+    text-align: center;
+    align-items: center;
+    padding-top: 2rem;
+}
+
+button {
+    border: 1;
+    border-color: rgb(57, 178, 42);
+    background-color: rgb(57, 178, 42);
+    font-weight: bold;
+    outline: 0;
+}
+
+button:disabled {
+    border-color: rgb(134, 128, 128);
+    background-color: rgb(134, 128, 128);
+}
